fix: remove video z-index to prevent bug on firefox / brave (#41)

--- a/src/components/camera/camera.css
+++ b/src/components/camera/camera.css
@@ -76,7 +76,6 @@ video {
   height: 100%;
   max-height: 100%;
   min-height: 100%;
-  z-index: -1;
   object-fit: cover;
   background-color: black;
 }
